src/css/style/blocks/_landing.scss
.landing{
	width: 100%;
	display: flex;
	flex-direction: row;
	align-items: flex-start;
	justify-content: space-between;
	background-color: $gray_f3f;
}

.landing__content-wrapper{
	width: 100%;
	height: 100vh;
	overflow-x: hidden;
	overflow-y: scroll;
	display: flex;
	flex-direction: column;
	align-items: flex-end;
	@include media-breakpoint-up(lg) {
		max-width: none;
		margin-left: -$aside-tooltip-width;	
		margin-right: -$aside-tooltip-width;
		padding-left: $aside-tooltip-width;
	}    	
}

.landing__content-wrapper--shifted{
	max-width: none;
	margin-left: -$aside-tooltip-width;	
	margin-right: -$aside-tooltip-width;
	padding-left: $aside-tooltip-width;	
	.landing__content{
		width: 100vw;
		max-width: none;
		& * {
			max-width: none;
		}			
	}
	.landing__header{
		display: flex;
		flex-direction: column;
		align-items: flex-end;
		& > .page__wrapper{
			width: 100vw;
			max-width: none;
			margin-left: 0;
			margin-right: 0;			
		}
	}
}

.landing__content{
	display: flex; /*fix бага ie11 с min-height:100%*/
	flex-direction: column;
}

.landing__header{
	position: absolute;
	z-index: 2;
	top: 0;
	left: 0;
	width: 100%;
	color: $white;
	& > .page__wrapper{
		padding-top: 20px;
		padding-bottom: 20px;
		display: flex;
		flex-direction: row;
		align-items: center;
		justify-content: space-between;
		max-width: none;
	}
	.landing__logo{
		width: 131px;
		height: 40px;
		flex-shrink: 0;
	}
	.header__info{
		display: none;
		white-space: nowrap;
	}
	.info__phone{
		color: $white;
		font-family: 'Exo2';
		font-size: 18px;
		&:hover{
			color: $white;
		}
	}
	.info__schedule{
		font-size: 12px;
		opacity: 0.6;
	}
	.button--primary{
		display: none;		
	}
	.btn-link{
		color: $white;
		padding-right: 0;
		flex-shrink: 0;
		.icon{
			width: 25px;
			height: 25px;
		}
	}
	.slider__pagination{
		position: static;
		display: none;
	}
	@include media-breakpoint-up(md) {
		.landing__logo{
			margin-right: 60px;
		}		
		.header__info{
			display: block;
		}
		.button--primary{
			display: block;		
		}
	}
	@include media-breakpoint-up(lg) {
		.header__info{
			margin-right: auto;
		}
		.button--primary{
			display: none;		
		}
		.btn-link{
			display: none !important;
		}
		.slider__pagination{
			display: flex;
		}		
	}			
}

.landing__aside-wrapper{
	width: $landing-aside-width;
	transition: width $anim-dur;
	flex-shrink: 0;	
	height: 100vh;
	overflow-y: scroll;
	overflow-x: hidden !important; /*???*/
	.ps__rail-x{
		display: none;
	}
}

.landing__aside{
	flex-shrink: 0;
	min-height: 100vh;
	width: $landing-aside-width;
	max-width: none;
	padding-top: 30px;
	padding-bottom: 30px;
	padding-left: 40px;
	padding-right: 40px;
	position: relative;
	z-index: 2;
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	justify-content: flex-start;
	&::before{
		content: '';
		display: block;
		position: absolute;
		z-index: 1;
		top: 0;
		left: $aside-tooltip-width;
		width: 100%;
		height: 100%;
		background-color: $white;
		box-shadow: -3px 0px 8px rgba(0, 0, 0, 0.08);
	}	
	.info__phone{
		font-size: 18px;
		line-height: 1.2;
		margin-bottom: 6px;
	}
	.info__schedule{
		font-size: 12px;
		color: $gray_282;
		margin-bottom: 20px;
	}	
	.info__copy{
		font-size: 12px;
		color: $gray_747;
	}
	@include media-breakpoint-up(lg) {
		padding-left: 40px + $aside-tooltip-width;
	}	
}

.landing__aside-header{
	width: 100%;
	display: flex;
	flex-direction: column;
	align-items: flex-end;
	justify-content: flex-end;
	margin-bottom: 25px;
	flex-shrink: 0;
	position: relative;
	z-index: 2;
	.btn-link{
		padding-right: 0;
		color: $gray_282;
		.icon{
			width: 25px;
			height: 25px;			
		}
	}
	@include media-breakpoint-up(lg) {
		.btn-link{
			display: none;
		}
	}
}

.landing__aside-main{
	flex-grow: 1;
	flex-shrink: 0;
	width: 100%;
	position: relative;
	z-index: 2;
}

.landing__aside-footer{
	width: 100%;
	border-top: 1px solid;
	border-color: rgba(0, 0, 0, 0.1);
	padding-top: 20px;
	flex-shrink: 0;
	position: relative;
	z-index: 2;
	@include media-breakpoint-up(lg) {
		padding-top: 30px;
	}		
}

.landing__aside-menu{
	max-width: none;
	margin-left: -40px + $aside-tooltip-width;
	margin-right: -40px;
	color: $gray_747;
	font-size: 14px;
	.menu__item{	
		padding-left: 40px;
		padding-right: 40px;
		padding-top: 20px;
		padding-bottom: 20px;
		position: relative;
		.link{
			font-size: 18px;
			font-family: 'Exo2';
			font-weight: $fw-bold;
			display: inline;
			color: $gray_282;
			text-decoration: none;
			border-bottom: 1px solid;
			border-bottom-color: rgba(70, 147, 75, 0.3);
			border-bottom-style: dotted;
			line-height: 1.2;
			&:hover{
				color: $green_469;
			}
		}
	}
	.menu__item--active{
		background-color: $gray_f3f;
		color: $gray_282;
		&::before{
			content: '';
			display: block;
			position: absolute;
			left: -$aside-tooltip-width;
			top: 25px;
			width: $aside-tooltip-width;
			height: 22px;
			background-image: url("data:image/svg+xml,%3Csvg width='18' height='40' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cdefs%3E%3Cfilter id='f1' x='0' y='0' width='200%25' height='200%25'%3E%3CfeGaussianBlur result='blurOut' in='offOut' stdDeviation='2' /%3E%3C/filter%3E%3C/defs%3E%3Cpath d='M0 20L18 .081V39.92L0 20z' fill='%23000000' opacity='0.1' filter='url%28%23f1%29'/%3E%3Cpath d='M0 20L18 .081V39.92L0 20z' fill='%23F3F3F3'/%3E%3C/svg%3E%0A");
			background-position: top left;
			background-repeat: no-repeat;
			background-size: 10px 22px;
		}
		.link{
			border: none;
			color: $green_469;
		}		
	}
	@include media-breakpoint-up(lg) {
		margin-left: -40px;
	}	
}

.landing__aside-wrapper--hidden{
	width: 0;
	@include media-breakpoint-up(lg) {
		width: auto;
	}
}

.landing__section{
	min-height: 100vh;
	flex-shrink: 0;
	position: relative;
	.section__btn{
		opacity: 0;
		position: absolute;
		z-index: 2;
		bottom: 20px;
		left: 50%;
		transform: translateX(-50%);
		color: $white;
		transition: opacity $anim-dur;
		&:hover{
			color: $green_3e8;
			opacity: 1;
		}
		.icon{
			width: 32px;
			height: 14px;
		}
	}	
	@include media-breakpoint-up(md) {
		.section__btn{
			.icon{
				width: 64px;
				height: 28px;
			}
		}
	}
	@include media-breakpoint-up(lg) {
		.section__btn{

		}
	}
	@include media-breakpoint-up(xl) {
		.section__btn{

		}
	}					
}

.landing__section--active{
	.section__btn{
		opacity: 0.5;
	}
}

.landing__form-wrapper{
	width: 100vw;
	max-width: 100vw;
	transition: width $anim-dur;
	flex-shrink: 0;	
	height: 100vh;
	overflow-y: scroll;
	overflow-x: hidden !important; /*???*/
	.ps__rail-x{
		display: none;
	}
	@include media-breakpoint-up(md) {

	}
	@include media-breakpoint-up(lg) {
		width: $landing-form-width-lg;
		margin-right: -$aside-tooltip-width;
	}
	@include media-breakpoint-up(xl) {
		width: $landing-form-width-xl;
	}		
}

.landing__form{
	width: 100vw;
	max-width: none;
	min-height: 100vh;
	padding-top: 60px;
	padding-bottom: 60px;
	padding-left: 20px;
	padding-right: 20px;
	position: relative;
	font-size: 14px;
	&::before{
		content: '';
		display: block;
		position: absolute;
		z-index: 1;
		top: 0;
		left: 0;
		width: 100%;
		height: 100%;
		background-color: $white;
		box-shadow: -3px 0px 8px rgba(0, 0, 0, 0.08);
	}	
	*{
		position: relative;
		z-index: 2;	
	}
	.form__title{
		font-family: 'Exo2';
		font-weight: $fw-medium;
		font-size: 36px;
		line-height: 1.2;
		margin-bottom: 40px;
	}
	.btn-link{
		color: $gray_dad;
		position: absolute;
		z-index: 3;
		top: 30px;
		right: 30px;
		&:hover{
			color: $green_3e8;
		}
		.icon{
			width: 30px;
			height: 30px;
		}
		.icon--menu-close-thin{
			display: none;
		}
	}
	form{
		max-width: 420px;
		margin-left: auto;
		margin-right: auto;
		label{
			color: $gray_747;
			font-size: 13px;
			margin-bottom: 4px;
		}
	}
	@include media-breakpoint-up(md) {
		.btn-link{
			.icon--menu-close{
				display: none;
			}
			.icon--menu-close-thin{
				display: inline;
			}
		}
	}	
	@include media-breakpoint-up(lg) {
		padding-left: 100px;
		padding-right: 40px;
		width: $landing-form-width-lg;
		&::before{
			left: $aside-tooltip-width;
		}
		form{
			margin-left: 0;
		}		
	}
	@include media-breakpoint-up(xl) {
		width: $landing-form-width-xl;		
	}	
}

.landing__form-wrapper--hidden{
	width: 0;
	margin-right: 0;
}

